--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -23,9 +23,9 @@
 
         <FrameLayout
                 android:id="@+id/note_text_click_container"
-                style="@style/NoteItem.Click">
+                style="@style/Container.NoteItem.Click">
 
-            <LinearLayout style="@style/NoteItem.Container">
+            <LinearLayout style="@style/Container.NoteItem.Content">
 
                 <LinearLayout
                         android:layout_width="0dp"
@@ -35,14 +35,14 @@
 
                     <TextView
                             android:id="@+id/note_text_name_text"
-                            style="@style/NoteItem.Name"
+                            style="@style/Text.NoteItem.Name"
                             android:text='@{noteItem.name}'
                             android:visibility='@{text.isEmpty(noteItem.name) ? v.GONE : v.VISIBLE}'
                             tools:text="@string/preview_note_name"/>
 
                     <TextView
                             android:id="@+id/note_text_content_text"
-                            style="@style/NoteItem.Text"
+                            style="@style/Text.NoteItem.Content"
                             android:text='@{noteItem.text}'
                             tools:text="@string/preview_note_text"/>
 
@@ -54,7 +54,7 @@
 
                 <ImageView
                         android:id="@+id/note_text_color_view"
-                        style="@style/NoteItem.Color.Vertical"
+                        style="@style/Image.Color.Vertical"
                         android:contentDescription="@null"
                         app:noteColor='@{noteItem.color}'
                         app:viewOnDark='@{true}'
