--- a/app/src/main/res/values/styles_appearance.xml
+++ b/app/src/main/res/values/styles_appearance.xml
@@ -7,7 +7,7 @@
         <item name="android:textColor">?attr/clContent</item>
     </style>
 
-    <style name="Appearance.SubMain">
+    <style name="Appearance.Second">
         <item name="android:textColor">?attr/clContentSecond</item>
     </style>
 
