--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -22,14 +22,14 @@
 
         <ImageView
                 android:id="@+id/note_info_rank_image"
-                style="@style/NoteItem.Indicator.Info"
+                style="@style/Image.NoteItem.Info"
                 android:contentDescription="@null"
                 android:visibility='@{noteItem.rankId.size == 0 ? v.GONE : v.VISIBLE}'
                 app:srcCompat="@drawable/ic_rank"/>
 
         <ImageView
                 android:id="@+id/note_info_bind_image"
-                style="@style/NoteItem.Indicator.Info"
+                style="@style/Image.NoteItem.Info"
                 android:contentDescription="@null"
                 android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                 android:visibility='@{noteItem.status ? v.VISIBLE : v.GONE}'
@@ -37,7 +37,7 @@
 
         <TextView
                 android:id="@+id/note_info_progress_text"
-                style="@style/NoteItem.Info"
+                style="@style/Text.NoteItem.Info"
                 android:layout_width="wrap_content"
                 android:text='@{noteItem.type == noteType.ROLL ? noteItem.text : ""}'
                 android:visibility='@{noteItem.type == noteType.ROLL ?  v.VISIBLE : v.GONE}'
@@ -46,7 +46,7 @@
 
         <TextView
                 android:id="@+id/note_info_change_text"
-                style="@style/NoteItem.Info"
+                style="@style/Text.NoteItem.Info"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 app:time='@{noteItem.change}'
@@ -54,7 +54,7 @@
 
         <TextView
                 android:id="@+id/note_info_create_text"
-                style="@style/NoteItem.Info"
+                style="@style/Text.NoteItem.Info"
                 android:layout_width="wrap_content"
                 app:time='@{noteItem.create}'
                 tools:text="@string/preview_note_time"/>
