--- a/app/src/main/res/layout/include_roll_note_enter.xml
+++ b/app/src/main/res/layout/include_roll_note_enter.xml
@@ -34,7 +34,7 @@
 
             <EditText
                     android:id="@+id/roll_note_enter"
-                    style="@style/Enter.Text"
+                    style="@style/EditText.SingleRow"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -47,7 +47,7 @@
 
             <ImageButton
                     android:id="@+id/roll_note_add_button"
-                    style="@style/Enter.Button"
+                    style="@style/Button.Small"
                     android:layout_gravity="bottom"
                     android:contentDescription="@null"
                     app:boolExpression='@{!enterEmpty}'
