--- a/app/src/main/res/layout/item_roll_read.xml
+++ b/app/src/main/res/layout/item_roll_read.xml
@@ -30,14 +30,14 @@
 
                 <CheckBox
                         android:id="@+id/roll_read_check"
-                        style="@style/RollItem.Read.Check"
+                        style="@style/Button.RollItem.Read"
                         app:checkState='@{rollItem.check}'
                         app:checkToggle='@{checkToggle}'
                         tools:checked="true"/>
 
                 <ImageButton
                         android:id="@+id/roll_read_click_button"
-                        style="@style/RollItem.Click"
+                        style="@style/Container.RollItem.Click"
                         android:contentDescription="@null"
                         android:visibility='@{keyBin ? v.INVISIBLE : v.VISIBLE}'/>
 
@@ -45,13 +45,12 @@
 
             <TextView
                     android:id="@+id/roll_read_text"
-                    style="@style/RollItem.Read.Text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    style="@style/EditText.RollItem.Read"
                     android:text='@{rollItem.text}'
                     tools:text="@string/preview_note_roll"/>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
 </layout>
