--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -17,8 +17,7 @@
                 android:layout_height="wrap_content"
                 android:baselineAligned="false"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/layout_8dp">
+                android:orientation="horizontal">
 
             <FrameLayout
                     android:layout_width="match_parent"
@@ -27,7 +26,7 @@
 
                 <ImageView
                         android:id="@+id/logo_image"
-                        style="@style/ViewAbout.Logo"
+                        style="@style/Image.Logo"
                         android:contentDescription="@null"
                         app:srcCompat="@mipmap/img_logo_about"/>
 
@@ -41,13 +40,13 @@
                     android:orientation="vertical">
 
                 <TextView
-                        style="@style/ViewAbout.Title"
+                        style="@style/Text.About.Title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/app_name"/>
 
                 <TextView
-                        style="@style/ViewAbout.Subtitle"
+                        style="@style/Text.About.Subtitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingBottom="@dimen/layout_4dp"
@@ -88,6 +87,7 @@
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/layout_8dp"
                 android:gravity="center"
                 android:text="@string/about_app_version"
                 android:textAppearance="@style/Appearance.Main"
