--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -22,10 +22,7 @@
         <item name="android:scrollbars">vertical</item>
     </style>
 
-    <style name="EditText" parent="Widget.AppCompat.EditText">
-        <item name="android:textColor">?attr/clContent</item>
-        <item name="android:textColorHint">?attr/clDisable</item>
-    </style>
+    <!-- -->
 
     <style name="Divider">
         <item name="android:background">?attr/clDivider</item>
@@ -40,5 +37,339 @@
         <item name="android:layout_width">@dimen/layout_1dp</item>
         <item name="android:layout_height">match_parent</item>
     </style>
+
+    <!-- -->
+
+    <style name="Container"/>
+
+    <style name="Container.Info">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:animateLayoutChanges">true</item>
+    </style>
+
+    <style name="Container.NoteItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="Container.NoteItem.Click">
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="Container.NoteItem.Content">
+        <item name="android:orientation">horizontal</item>
+        <item name="android:padding">@dimen/layout_8dp</item>
+    </style>
+
+    <style name="Container.RollItem"/>
+
+    <style name="Container.RollItem.Click">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="Container.ToolbarNote"/>
+
+    <style name="Container.ToolbarNote.Scroll">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:overScrollMode">never</item>
+        <item name="android:scrollbars">none</item>
+    </style>
+
+    <!-- -->
+
+    <style name="Text"/>
+
+    <style name="Text.Info">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Text.Info.Title">
+        <item name="android:padding">@dimen/layout_4dp</item>
+        <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textSize">@dimen/text_18sp</item>
+    </style>
+
+    <style name="Text.Info.Details">
+        <item name="android:paddingLeft">@dimen/icon_16dp</item>
+        <item name="android:paddingTop">@dimen/layout_4dp</item>
+        <item name="android:paddingRight">@dimen/icon_16dp</item>
+        <item name="android:paddingBottom">@dimen/layout_4dp</item>
+        <item name="android:textAppearance">@style/Appearance.Second</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+    </style>
+
+    <style name="Text.RankItem"/>
+
+    <style name="Text.RankItem.Name">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
+    </style>
+
+    <style name="Text.RankItem.Info">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:ellipsize">start</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textAppearance">@style/Appearance.Second</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+    </style>
+
+    <style name="Text.SortItem">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">@dimen/layout_16dp</item>
+        <item name="android:layout_marginBottom">@dimen/layout_16dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
+    </style>
+
+    <style name="Text.About">
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="Text.About.Title">
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textSize">@dimen/text_18sp</item>
+    </style>
+
+    <style name="Text.About.Subtitle">
+        <item name="android:gravity">center</item>
+        <item name="android:textAppearance">@style/Appearance.Second</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+    </style>
+
+    <style name="Text.NoteItem"/>
+
+    <style name="Text.NoteItem.Name">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
+    </style>
+
+    <style name="Text.NoteItem.Roll">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
+    </style>
+
+    <style name="Text.NoteItem.Content">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">5</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textSize">@dimen/text_16sp</item>
+    </style>
+
+    <style name="Text.NoteItem.Info">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginRight">@dimen/layout_4dp</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAppearance">@style/Appearance.Second</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+    </style>
+
+    <style name="Text.ToolbarNote" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:maxLength">@integer/length_note_name</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textColorHint">?attr/clContentSecond</item>
+        <item name="android:textIsSelectable">true</item>
+    </style>
+
+    <!-- -->
+
+    <style name="EditText" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">?attr/clContent</item>
+        <item name="android:textColorHint">?attr/clDisable</item>
+    </style>
+
+    <style name="EditText.TextNote">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:gravity">top</item>
+        <item name="android:padding">@dimen/layout_8dp</item>
+        <item name="android:textSize">@dimen/text_18sp</item>
+    </style>
+
+    <style name="EditText.TextNote.Enter">
+        <item name="android:imeOptions">flagNoFullscreen</item>
+        <item name="android:inputType">
+            textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine
+        </item>
+    </style>
+
+    <style name="EditText.TextNote.Read">
+        <item name="android:linksClickable">true</item>
+        <item name="android:textIsSelectable">true</item>
+    </style>
+
+    <style name="EditText.SingleRow">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginLeft">@dimen/layout_8dp</item>
+        <item name="android:layout_marginRight">@dimen/layout_8dp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:focusable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:textSize">@dimen/text_18sp</item>
+    </style>
+
+    <style name="EditText.RollItem">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:padding">@dimen/layout_8dp</item>
+        <item name="android:textSize">@dimen/text_18sp</item>
+    </style>
+
+    <style name="EditText.RollItem.Read">
+        <item name="android:autoLink">all</item>
+        <item name="android:gravity">top</item>
+        <item name="android:linksClickable">true</item>
+        <item name="android:textIsSelectable">true</item>
+    </style>
+
+    <style name="EditText.RollItem.Write">
+        <item name="android:imeOptions">flagNoFullscreen</item>
+        <item name="android:inputType">
+            textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine
+        </item>
+    </style>
+
+    <style name="EditText.ToolbarNote" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:imeOptions">actionNext|flagNoFullscreen</item>
+        <item name="android:inputType">textCapSentences|textAutoCorrect|textAutoComplete</item>
+        <item name="android:maxLength">@integer/length_note_name</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:scrollHorizontally">true</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textColorHint">?attr/clContentSecond</item>
+    </style>
+
+    <!-- -->
+
+    <style name="Button"/>
+
+    <style name="Button.Small">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
+        <item name="android:layout_marginStart">@dimen/layout_4dp</item>
+        <item name="android:layout_marginRight">@dimen/layout_4dp</item>
+        <item name="android:layout_marginEnd">@dimen/layout_4dp</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:padding">@dimen/layout_8dp</item>
+    </style>
+
+    <style name="Button.RankItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:padding">@dimen/layout_8dp</item>
+    </style>
+
+    <style name="Button.RollItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:clickable">false</item>
+    </style>
+
+
+    <style name="Button.RollItem.Read">
+        <item name="android:visibility">visible</item>
+    </style>
+
+    <style name="Button.RollItem.Write">
+        <item name="android:visibility">invisible</item>
+    </style>
+
+
+    <!-- -->
+
+    <style name="Image"/>
+
+    <style name="Image.Info">
+        <item name="android:layout_width">@dimen/icon_128dp</item>
+        <item name="android:layout_height">@dimen/icon_128dp</item>
+        <item name="android:layout_marginBottom">@dimen/layout_8dp</item>
+    </style>
+
+    <style name="Image.Logo">
+        <item name="android:layout_width">@dimen/icon_128dp</item>
+        <item name="android:layout_height">@dimen/icon_128dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="Image.SortItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginLeft">@dimen/layout_4dp</item>
+        <item name="android:layout_marginRight">@dimen/layout_4dp</item>
+        <item name="android:tint">?attr/clAccent</item>
+    </style>
+
+    <style name="Image.Color"/>
+
+    <style name="Image.Color.Vertical">
+        <item name="android:layout_width">@dimen/layout_4dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginStart">@dimen/layout_8dp</item>
+        <item name="android:layout_marginLeft">@dimen/layout_8dp</item>
+        <item name="android:src">@drawable/ic_color_indicator</item>
+    </style>
+
+    <style name="Image.Color.Horizontal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/layout_4dp</item>
+    </style>
+
+    <style name="Image.NoteItem">
+        <item name="android:layout_width">@dimen/icon_16dp</item>
+        <item name="android:layout_height">@dimen/icon_16dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="Image.NoteItem.Check">
+        <item name="android:tint">?attr/clContent</item>
+    </style>
+
+    <style name="Image.NoteItem.Info">
+        <item name="android:layout_marginRight">@dimen/layout_4dp</item>
+        <item name="android:tint">?attr/clNoteIndicator</item>
+    </style>
+
 
 </resources>
