--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Date Formats -->
+    <string name="date_app_format" translatable="false">yyyy-MM-dd HH:mm:ss</string>
+    <string name="date_note_today_format" translatable="false">HH:mm</string>
+    <string name="date_note_yesterday_format" translatable="false">d MMM yyyy</string>
+
     <!-- Text length -->
     <integer name="length_note_name">30</integer>
     <integer name="length_rank_name">30</integer>
