--- a/app/src/main/res/xml/preference.xml
+++ b/app/src/main/res/xml/preference.xml
@@ -2,6 +2,16 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:key="screen">
 
+    <PreferenceCategory android:title="@string/pref_app_header">
+
+        <Preference
+                android:defaultValue="@integer/pref_theme_default"
+                android:key="@string/pref_key_theme"
+                android:summary="@string/pref_theme_summary"
+                android:title="@string/pref_theme_title" />
+
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/pref_note_header">
 
         <Preference
@@ -39,13 +49,7 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/pref_app_header">
-
-        <Preference
-            android:defaultValue="@integer/pref_theme_default"
-            android:key="@string/pref_key_theme"
-            android:summary="@string/pref_theme_summary"
-            android:title="@string/pref_theme_title" />
+    <PreferenceCategory android:title="@string/pref_other_header">
 
         <Preference
             android:key="@string/pref_key_rate"
