--- a/app/src/main/res/values/string_test.xml
+++ b/app/src/main/res/values/string_test.xml
@@ -11,4 +11,8 @@
         While you\'re traveling with me
     </string>
 
+    <string name="test_roll_text" translatable="false">
+        The Sun Ain\'t Gonna Shine Anymore
+    </string>
+
 </resources>
