--- a/app/src/main/res/layout/include_roll_note_panel.xml
+++ b/app/src/main/res/layout/include_roll_note_panel.xml
@@ -9,7 +9,7 @@
         <import alias="v" type="android.view.View"/>
         <import alias="noteType" type="sgtmelon.scriptum.app.model.key.NoteType"/>
 
-        <variable name="menuClick" type="sgtmelon.scriptum.app.screen.note.roll.MenuCallback"/>
+        <variable name="menuCallback" type="sgtmelon.scriptum.app.screen.callback.RollNoteMenuCallback"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
@@ -50,7 +50,7 @@
                         android:id="@+id/note_panel_restore_button"
                         style="@style/Button.Small"
                         android:contentDescription="@string/menu_note_restore"
-                        android:onClick='@{() -> menuClick.onMenuRestore()}'
+                        android:onClick='@{() -> menuCallback.onMenuRestore()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_restore"/>
 
@@ -58,7 +58,7 @@
                         android:id="@+id/note_panel_restore_open_button"
                         style="@style/Button.Small"
                         android:contentDescription="@string/menu_note_restore_open"
-                        android:onClick='@{() -> menuClick.onMenuRestoreOpen()}'
+                        android:onClick='@{() -> menuCallback.onMenuRestoreOpen()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_restore_open"/>
 
@@ -66,7 +66,7 @@
                         android:id="@+id/note_panel_clear_button"
                         style="@style/Button.Small"
                         android:contentDescription="@string/menu_note_clear"
-                        android:onClick='@{() -> menuClick.onMenuClear()}'
+                        android:onClick='@{() -> menuCallback.onMenuClear()}'
                         android:tint="?attr/clAccent"
                         app:srcCompat="@drawable/ic_clear"/>
 
@@ -84,7 +84,7 @@
                         android:id="@+id/note_panel_undo_button"
                         style="@style/Button.Small"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> menuClick.onMenuUndo()}'
+                        android:onClick='@{() -> menuCallback.onMenuUndo()}'
                         app:boolExpression='@{undoAccess}'
                         app:enabled='@{undoAccess}'
                         app:falseColor='@{R.attr.clDisable}'
@@ -96,7 +96,7 @@
                         android:id="@+id/note_panel_redo_button"
                         style="@style/Button.Small"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> menuClick.onMenuRedo()}'
+                        android:onClick='@{() -> menuCallback.onMenuRedo()}'
                         app:boolExpression='@{redoAccess}'
                         app:enabled='@{redoAccess}'
                         app:falseColor='@{R.attr.clDisable}'
@@ -108,7 +108,7 @@
                         android:id="@+id/note_panel_rank_button"
                         style="@style/Button.Small"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> menuClick.onMenuRank()}'
+                        android:onClick='@{() -> menuCallback.onMenuRank()}'
                         app:boolExpression='@{!rankEmpty}'
                         app:enabled='@{!rankEmpty}'
                         app:falseColor='@{R.attr.clDisable}'
@@ -120,7 +120,7 @@
                         android:id="@+id/note_panel_color_button"
                         style="@style/Button.Small"
                         android:contentDescription="@null"
-                        android:onClick='@{() -> menuClick.onMenuColor()}'
+                        android:onClick='@{() -> menuCallback.onMenuColor()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_palette"/>
 
@@ -133,7 +133,7 @@
                         android:id="@+id/note_panel_save_button"
                         style="@style/Button.Small"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:onClick='@{() -> menuClick.onMenuSave(true)}'
+                        android:onClick='@{() -> menuCallback.onMenuSave(true)}'
                         android:text="@string/menu_note_save"
                         app:enabled='@{saveEnabled}'/>
 
@@ -151,7 +151,7 @@
                         android:id="@+id/note_panel_check_button"
                         style="@style/Button.Small"
                         android:contentDescription='@{noteItem.allCheck ? @string/menu_note_check_zero : @string/menu_note_check_all}'
-                        android:onClick='@{() -> menuClick.onMenuCheck()}'
+                        android:onClick='@{() -> menuCallback.onMenuCheck()}'
                         android:visibility='@{noteItem.type == noteType.ROLL ? v.VISIBLE : v.GONE}'
                         app:boolExpression='@{noteItem.allCheck}'
                         app:falseColor='@{R.attr.clContent}'
@@ -163,7 +163,7 @@
                         android:id="@+id/note_panel_bind_button"
                         style="@style/Button.Small"
                         android:contentDescription="@string/menu_note_status_bind"
-                        android:onClick='@{() -> menuClick.onMenuBind()}'
+                        android:onClick='@{() -> menuCallback.onMenuBind()}'
                         android:src='@{noteItem.type == noteType.TEXT ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
                         app:boolExpression='@{noteItem.status}'
                         app:falseColor='@{R.attr.clContent}'
@@ -175,7 +175,7 @@
                         android:id="@+id/note_panel_convert_button"
                         style="@style/Button.Small"
                         android:contentDescription='@{noteItem.type == noteType.TEXT ? @string/menu_note_convert_to_roll : @string/menu_note_convert_to_text}'
-                        android:onClick='@{() -> menuClick.onMenuConvert()}'
+                        android:onClick='@{() -> menuCallback.onMenuConvert()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_convert"/>
 
@@ -183,7 +183,7 @@
                         android:id="@+id/note_panel_delete_button"
                         style="@style/Button.Small"
                         android:contentDescription="@string/menu_note_delete"
-                        android:onClick='@{() -> menuClick.onMenuDelete()}'
+                        android:onClick='@{() -> menuCallback.onMenuDelete()}'
                         android:tint="?attr/clContent"
                         app:srcCompat="@drawable/ic_bin"/>
 
@@ -196,7 +196,7 @@
                         android:id="@+id/note_panel_edit_button"
                         style="@style/Button.Small"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:onClick='@{() -> menuClick.onMenuEdit(true)}'
+                        android:onClick='@{() -> menuCallback.onMenuEdit(true)}'
                         android:text="@string/menu_note_edit"/>
 
             </LinearLayout>
