Закончил приборку архитектуры проекта в папке screen

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -4,7 +4,7 @@
 
     <data>
 
-        <variable name="menuCallback" type="sgtmelon.scriptum.app.screen.callback.RollNoteMenuCallback"/>
+        <variable name="menuCallback" type="sgtmelon.scriptum.app.screen.callback.note.roll.RollNoteMenuCallback"/>
         <variable name="rankEmpty" type="boolean"/>
 
         <variable name="noteItem" type="sgtmelon.scriptum.app.model.item.NoteItem"/>
