Тесты для RankFragment

--- a/app/src/main/res/layout-v21/item_rank.xml
+++ b/app/src/main/res/layout-v21/item_rank.xml
@@ -39,6 +39,7 @@
                     app:srcSelectColor="?attr/clAccent"/>
 
             <LinearLayout
+                    android:id="@+id/rank_content_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
