Доверстал about dialog

--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -1,98 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/layout_16dp">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="@dimen/layout_16dp">
+            android:orientation="horizontal">
+
+        <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5">
+
+            <ImageView
+                    android:id="@+id/about_logo_image"
+                    style="@style/Image.Logo"
+                    android:contentDescription="@null"
+                    app:srcCompat="@mipmap/img_logo_about"/>
+
+        </FrameLayout>
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:baselineAligned="false"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_gravity="center"
+                android:layout_weight="0.5"
+                android:orientation="vertical">
 
-            <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.5">
-
-                <ImageView
-                        android:id="@+id/logo_image"
-                        style="@style/Image.Logo"
-                        android:contentDescription="@null"
-                        app:srcCompat="@mipmap/img_logo_about"/>
-
-            </FrameLayout>
-
-            <LinearLayout
+            <TextView
+                    style="@style/Text.About.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="0.5"
-                    android:orientation="vertical">
+                    android:text="@string/app_name"/>
 
-                <TextView
-                        style="@style/Text.About.Title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/app_name"/>
+            <TextView
+                    android:id="@+id/about_version"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/Text.About.Subtitle"
+                    android:layout_marginBottom="@dimen/layout_8dp"
+                    tools:text="@string/preview_version"/>
 
-                <TextView
-                        style="@style/Text.About.Subtitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/layout_4dp"
-                        android:text="@string/about_app_for"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="@dimen/layout_8dp"
+                    android:gravity="center"
+                    android:text="@string/about_app_developer"
+                    android:textAppearance="@style/Appearance.Main"
+                    android:textSize="@dimen/text_16sp"/>
 
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/layout_4dp"
-                        android:orientation="vertical"
-                        android:weightSum="1">
-
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginBottom="@dimen/layout_4dp"
-                            android:layout_weight="0.5"
-                            android:gravity="center"
-                            android:text="@string/about_app_developer"
-                            android:textAppearance="@style/Appearance.Main"
-                            android:textSize="@dimen/text_16sp"/>
-
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.5"
-                            android:gravity="center"
-                            android:text="@string/about_app_logo_designer"
-                            android:textAppearance="@style/Appearance.Main"
-                            android:textSize="@dimen/text_16sp"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="@string/about_app_logo_designer"
+                    android:textAppearance="@style/Appearance.Main"
+                    android:textSize="@dimen/text_16sp"/>
 
         </LinearLayout>
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/layout_8dp"
-                android:gravity="center"
-                android:text="@string/about_app_version"
-                android:textAppearance="@style/Appearance.Main"
-                android:textSize="@dimen/text_14sp"/>
-
     </LinearLayout>
 
-</ScrollView>
+</LinearLayout>
