--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -106,11 +106,8 @@
 
 
     <!-- About dialog -->
-    <string name="about_app_for">для Андроид</string>
     <string name="about_app_developer">Разработчик:\nКузнецов Алексей</string>
-    <string name="about_app_logo_designer">Дизайнер:\nПолепкина Арина</string>
-    <string name="about_app_version">Версия приложения: 1.1.0</string>
-
+    <string name="about_app_logo_designer">Дизайнер логотипа:\nПолепкина Арина</string>
 
     <!-- EditText hint -->
     <string name="hint_enter_rank_new">Новая категория</string>
