--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -24,8 +24,8 @@
                 android:layout_height="match_parent">
 
             <include
+                    android:id="@+id/bin_info_include"
                     layout="@layout/include_info"
-                    android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                     app:details='@{R.string.info_bin_details}'
                     app:icon='@{R.mipmap.img_info_bin}'
                     app:title='@{R.string.info_bin_title}'/>
