--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -21,16 +21,16 @@
             android:orientation="vertical">
 
         <include layout="@layout/include_toolbar_rank"
-                 app:enableClear='@{enableClear}'
-                 app:enableAdd='@{enableAdd}'/>
+                 app:enableAdd='@{enableAdd}'
+                 app:enableClear='@{enableClear}'/>
 
         <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             <include
+                    android:id="@+id/rank_info_include"
                     layout="@layout/include_info"
-                    android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                     app:details='@{R.string.info_rank_details}'
                     app:icon='@{R.mipmap.img_info_rank}'
                     app:title='@{R.string.info_rank_title}'/>
